Adds detection for qBittorrent

--- a/Tests/fixtures/mobile_apps.yml
+++ b/Tests/fixtures/mobile_apps.yml
@@ -1500,3 +1500,16 @@
     model: ""
   os_family: Windows
   browser_family: Unknown
+-
+  user_agent: qBittorrent/4.3.9 ProgramUpdater (www.qbittorrent.org)
+  os: [ ]
+  client:
+    type: mobile app
+    name: qBittorrent
+    version: 4.3.9
+  device:
+    type: ""
+    brand: ""
+    model: ""
+  os_family: Unknown
+  browser_family: Unknown
