--- a/regexes/client/mobile_apps.yml
+++ b/regexes/client/mobile_apps.yml
@@ -730,3 +730,8 @@
 - regex: 'MSDW'
   name: 'Dr. Watson'
   version: ''
+
+# qBittorrent (https://www.qbittorrent.org/)
+- regex: 'qBittorrent/(\d+[\.\d]+)'
+  name: 'qBittorrent'
+  version: '$1'
