Adds detection for CPU-Z

--- a/Tests/fixtures/mobile_apps.yml
+++ b/Tests/fixtures/mobile_apps.yml
@@ -1513,3 +1513,16 @@
     model: ""
   os_family: Unknown
   browser_family: Unknown
+-
+  user_agent: CPUID
+  os: [ ]
+  client:
+    type: mobile app
+    name: CPU-Z
+    version: ""
+  device:
+    type: ""
+    brand: ""
+    model: ""
+  os_family: Unknown
+  browser_family: Unknown
