--- a/regexes/client/mobile_apps.yml
+++ b/regexes/client/mobile_apps.yml
@@ -735,3 +735,8 @@
 - regex: 'qBittorrent/(\d+[\.\d]+)'
   name: 'qBittorrent'
   version: '$1'
+
+# CPU-Z (https://www.cpuid.com/)
+- regex: 'CPUID'
+  name: 'CPU-Z'
+  version: ''
