Adds detection for AIDA64

--- a/Tests/fixtures/mobile_apps.yml
+++ b/Tests/fixtures/mobile_apps.yml
@@ -1526,3 +1526,16 @@
     model: ""
   os_family: Unknown
   browser_family: Unknown
+-
+  user_agent: AIDA64
+  os: [ ]
+  client:
+    type: mobile app
+    name: AIDA64
+    version: ""
+  device:
+    type: ""
+    brand: ""
+    model: ""
+  os_family: Unknown
+  browser_family: Unknown
