--- a/regexes/client/mobile_apps.yml
+++ b/regexes/client/mobile_apps.yml
@@ -740,3 +740,8 @@
 - regex: 'CPUID'
   name: 'CPU-Z'
   version: ''
+
+# AIDA64 (https://www.aida64.com/)
+- regex: 'AIDA64'
+  name: 'AIDA64'
+  version: ''
