Adds detection for HandBrake and improves Windows OS detection

--- a/Tests/Parser/fixtures/oss.yml
+++ b/Tests/Parser/fixtures/oss.yml
@@ -2511,3 +2511,11 @@
     version: ""
     platform: ""
     family: Windows
+-
+  user_agent: HandBrake Win Upd 1.4.2 2021100300
+  os:
+    name: Windows
+    short_name: WIN
+    version: ""
+    platform: ""
+    family: Windows
