Adds detection for CCleaner

--- a/Tests/fixtures/mobile_apps.yml
+++ b/Tests/fixtures/mobile_apps.yml
@@ -1555,3 +1555,16 @@
     model: ""
   os_family: Windows
   browser_family: Unknown
+-
+  user_agent: Mozilla/4.0 (CCleaner, 5.86.9258)
+  os: [ ]
+  client:
+    type: mobile app
+    name: CCleaner
+    version: 5.86.9258
+  device:
+    type: ""
+    brand: ""
+    model: ""
+  os_family: Unknown
+  browser_family: Unknown
