--- a/regexes/client/mobile_apps.yml
+++ b/regexes/client/mobile_apps.yml
@@ -750,3 +750,8 @@
 - regex: 'HandBrake Win Upd (\d+[\.\d]+)'
   name: 'HandBrake'
   version: '$1'
+
+# CCleaner (https://www.ccleaner.com/)
+- regex: 'CCleaner, (\d+[\.\d]+)'
+  name: 'CCleaner'
+  version: '$1'
