Improves Microsoft Office detection

--- a/Tests/fixtures/mobile_apps.yml
+++ b/Tests/fixtures/mobile_apps.yml
@@ -1568,3 +1568,16 @@
     model: ""
   os_family: Unknown
   browser_family: Unknown
+-
+  user_agent: Microsoft Office/16.0
+  os: [ ]
+  client:
+    type: mobile app
+    name: Microsoft Office
+    version: "16.0"
+  device:
+    type: ""
+    brand: ""
+    model: ""
+  os_family: Unknown
+  browser_family: Unknown
