Adds detection for Edge Update

--- a/regexes/client/mobile_apps.yml
+++ b/regexes/client/mobile_apps.yml
@@ -755,3 +755,8 @@
 - regex: 'CCleaner, (\d+[\.\d]+)'
   name: 'CCleaner'
   version: '$1'
+
+# Edge Update (https://www.microsoft.com/en-us/)
+- regex: 'Microsoft Edge Update/(\d+[\.\d]+)'
+  name: 'Edge Update'
+  version: '$1'
