--- a/Tests/fixtures/mobile_apps.yml
+++ b/Tests/fixtures/mobile_apps.yml
@@ -1581,3 +1581,16 @@
     model: ""
   os_family: Unknown
   browser_family: Unknown
+-
+  user_agent: Microsoft Edge Update/1.3.153.47;winhttp
+  os: [ ]
+  client:
+    type: mobile app
+    name: Edge Update
+    version: 1.3.153.47
+  device:
+    type: ""
+    brand: ""
+    model: ""
+  os_family: Unknown
+  browser_family: Unknown
