Adds detection for Bose Music

--- a/Tests/fixtures/mobile_apps.yml
+++ b/Tests/fixtures/mobile_apps.yml
@@ -1594,3 +1594,19 @@
     model: ""
   os_family: Unknown
   browser_family: Unknown
+-
+  user_agent: Bose Music/16654 CFNetwork/1240.0.4 Darwin/20.5.0
+  os:
+    name: iOS
+    version: "14.6"
+    platform: ""
+  client:
+    type: mobile app
+    name: Bose Music
+    version: ""
+  device:
+    type: ""
+    brand: Apple
+    model: ""
+  os_family: iOS
+  browser_family: Unknown
