--- a/regexes/client/mobile_apps.yml
+++ b/regexes/client/mobile_apps.yml
@@ -760,3 +760,8 @@
 - regex: 'Microsoft Edge Update/(\d+[\.\d]+)'
   name: 'Edge Update'
   version: '$1'
+
+# Bose Music (https://apps.apple.com/us/app/bose-music/id1364986984)
+- regex: 'Bose Music'
+  name: 'Bose Music'
+  version: ''
