Improves detection for Apple iPhone 6s

--- a/regexes/device/mobiles.yml
+++ b/regexes/device/mobiles.yml
@@ -917,7 +917,7 @@ Apple:
     - regex: '(?:Apple-|.+_)?iPh(?:one)?8[C,_]2| 6SPLUS\)$'
       model: 'iPhone 6s Plus'
       device: 'phablet'
-    - regex: '(?:Apple-|.+_)?iPh(?:one)?8[C,_]1|iPhone 6s| 6S\)$'
+    - regex: '(?:Apple-|.+_)?iPh(?:one)?8[C,_]1|iPhone[ /]6s| 6S\)$'
       model: 'iPhone 6s'
       device: 'smartphone'
     - regex: '(?:Apple-|.+_)?iPh(?:one)?8[C,_]4| SE\)$'
