Adds detection for Facebook Groups

--- a/Tests/fixtures/mobile_apps.yml
+++ b/Tests/fixtures/mobile_apps.yml
@@ -1610,3 +1610,19 @@
     model: ""
   os_family: iOS
   browser_family: Unknown
+-
+  user_agent: 'Mozilla/5.0 (iPad; CPU OS 10_3_2 like Mac OS X) AppleWebKit/603.2.4 (KHTML, like Gecko) Mobile/14F89 [FBAN/GroupsForiOS;FBAV/48.0;FBBV/40069465;FBRV/0;FBDV/iPad3,4;FBMD/iPad;FBSN/iOS;FBSV/10.3.2;FBSS/2;FBCR/;FBID/tablet;FBLC/pt_BR;FBOP/5]'
+  os:
+    name: iOS
+    version: 10.3.2
+    platform: ""
+  client:
+    type: mobile app
+    name: Facebook Groups
+    version: "48.0"
+  device:
+    type: tablet
+    brand: Apple
+    model: iPad 4
+  os_family: iOS
+  browser_family: Unknown
