--- a/regexes/client/mobile_apps.yml
+++ b/regexes/client/mobile_apps.yml
@@ -29,6 +29,11 @@
   name: 'Facebook Messenger'
   version: '$1'
 
+# Facebook Groups
+- regex: '(?:GroupsForiOS).(?:FBAV)(?:[ /]([\d\.]+))?'
+  name: 'Facebook Groups'
+  version: '$1'
+
 # Facebook
 - regex: '(?:FBAV|com.facebook.katana)(?:[ /]([\d\.]+))?'
   name: 'Facebook'
