--- a/regexes/client/mobile_apps.yml
+++ b/regexes/client/mobile_apps.yml
@@ -345,7 +345,7 @@
   name: '1Password'
   version: '$1'
 
-- regex: '(?:Microsoft Office ?)?(Access|Excel|OneDrive for Business|OneNote|PowerPoint|Project|Publisher|Visio|Word)?[ /]([\d\.]+)'
+- regex: '(?:Microsoft Office )?(Access|Excel|OneDrive for Business|OneNote|PowerPoint|Project|Publisher|Visio|Word)[ /]([\d\.]+)'
   name: 'Microsoft Office $1'
   version: '$2'
 
