--- a/regexes/device/mobiles.yml
+++ b/regexes/device/mobiles.yml
@@ -12030,6 +12030,8 @@ Motorola:
       model: 'Edge Plus'
     - regex: '(?:MOT-|Motorola-)?edge plus'
       model: 'Edge Plus'
+    - regex: '(?:MOT-|Motorola-)?edge 20 lite'
+      model: 'Edge 20 Lite'
     - regex: '(?:MOT-|Motorola-)?edge 20 pro'
       model: 'Edge 20 Pro'
     - regex: '(?:MOT-|Motorola-)?edge'
