--- a/regexes/client/mobile_apps.yml
+++ b/regexes/client/mobile_apps.yml
@@ -732,7 +732,7 @@
   version: ''
 
 # Dr. Watson (https://www.microsoft.com/en-us/)
-- regex: 'MSDW'
+- regex: '^MSDW'
   name: 'Dr. Watson'
   version: ''
 
@@ -742,7 +742,7 @@
   version: '$1'
 
 # CPU-Z (https://www.cpuid.com/)
-- regex: 'CPUID'
+- regex: '^CPUID'
   name: 'CPU-Z'
   version: ''
 
