--- a/regexes/oss.yml
+++ b/regexes/oss.yml
@@ -469,7 +469,7 @@
   name: 'iOS'
   version: '$1'
 
-- regex: '(?:CPU OS|iPh(?:one)?[ _]OS|iOS)[ _/](\d+(?:[_\.]\d+)*)'
+- regex: 'iOS/(\d+[\.\d]+)'
   name: 'iOS'
   version: '$1'
 
@@ -596,6 +596,10 @@
 - regex: 'iPhone OS ([0-9]{1})([0-9]{1})([0-9]{1})'
   name: 'iOS'
   version: '$1.$2.$3'
+
+- regex: '(?:CPU OS|iPh(?:one)?[ _]OS|iOS)[ _/](\d+(?:[_\.]\d+)*)'
+  name: 'iOS'
+  version: '$1'
 
 - regex: '(?:FBIOS|Messenger(?:Lite)?ForiOS).*FBSV/ ?(\d+[\.\d]*);'
   name: 'iOS'
