Adds detection for multiples apps and improves iOS, Windows, iPhone, iPod detection (#6894)
* Adds detection for Emby Theater
* Adds detection for Y8 Browser
* Adds detection for NuMuKi Browser
* Adds detection for Landis+Gyr AIM Browser
* Adds detection for Visual Studio Code
* Improves detection for Windows OS
* Adds detection for Wireshark
* Adds detection for Samsung Magician
* Adds detection for Razer Synapse
* Improves detection for Binance
* Adds detection for Git
* Adds detection for Google Podcasts, improves iOS version detection, improves Apple iPod detection, adds detection for Apple iPod Touch 7
*Adds detection for Google Podcasts
*Improves iOS version detection *Improves Apple iPod detection
*Adds detection for Apple iPod Touch 7
* Adds detection for Windows CryptoAPI, Windows Delivery Optimization, Windows Update Agent, Dr. Watson and improves Windows OS detection
* Adds detection for qBittorrent
* Adds detection for CPU-Z
* Adds detection for AIDA64
* Adds detection for HandBrake and improves Windows OS detection
* Adds detection for CCleaner
* Adds detection for C++ REST SDK library
* Improves Microsoft Office detection
* Adds detection for Edge Update
* Adds detection for Bose Music
* Improves detection for Apple iPhone 6s
* Adds detection for Facebook Groups
* Revert for Microsoft Office
* Improve regexes
* Fix regex and improves detection for iPod Touch

--- a/Tests/Parser/fixtures/oss.yml
+++ b/Tests/Parser/fixtures/oss.yml
@@ -2416,6 +2416,14 @@
     platform: ""
     family: Real-time OS
 -
+  user_agent: Wireshark/3.4.9 WinSparkle/0.5.7 (Win64)
+  os:
+    name: Windows
+    short_name: WIN
+    version: ""
+    platform: x64
+    family: Windows
+-
   user_agent: uclient-fetch
   os:
     name: OpenWrt
@@ -2463,3 +2471,51 @@
     version: "9.40"
     platform: ""
     family: GNU/Linux
+-
+  user_agent: GooglePodcasts/2.0.2 iPod_touch/13.4.1 hw/iPod9_1
+  os:
+    name: iOS
+    short_name: IOS
+    version: 13.4.1
+    platform: ""
+    family: iOS
+-
+  user_agent: Microsoft-CryptoAPI/10.0
+  os:
+    name: Windows
+    short_name: WIN
+    version: "10.0"
+    platform: ""
+    family: Windows
+-
+  user_agent: Microsoft-Delivery-Optimization/10.0
+  os:
+    name: Windows
+    short_name: WIN
+    version: "10.0"
+    platform: ""
+    family: Windows
+-
+  user_agent: Windows-Update-Agent/10.0.10011.16384 Client-Protocol/2.32
+  os:
+    name: Windows
+    short_name: WIN
+    version: "10.0"
+    platform: ""
+    family: Windows
+-
+  user_agent: MSDW
+  os:
+    name: Windows
+    short_name: WIN
+    version: ""
+    platform: ""
+    family: Windows
+-
+  user_agent: HandBrake Win Upd 1.4.2 2021100300
+  os:
+    name: Windows
+    short_name: WIN
+    version: ""
+    platform: ""
+    family: Windows
