--- a/regexes/client/mobile_apps.yml
+++ b/regexes/client/mobile_apps.yml
@@ -29,6 +29,11 @@
   name: 'Facebook Messenger'
   version: '$1'
 
+# Facebook Groups
+- regex: '(?:GroupsForiOS).(?:FBAV)(?:[ /]([\d\.]+))?'
+  name: 'Facebook Groups'
+  version: '$1'
+
 # Facebook
 - regex: '(?:FBAV|com.facebook.katana)(?:[ /]([\d\.]+))?'
   name: 'Facebook'
@@ -577,6 +582,11 @@
   name: 'Binance'
   version: '$1'
 
+# Binance (https://www.binance.com/en/desktop-download)
+- regex: 'Binance/(\d+[\.\d]+)'
+  name: 'Binance'
+  version: '$1'
+
 # My World https://apps.apple.com/app/id598556821
 - regex: 'ru\.mail\.my/(\d+[\.\d]+)'
   name: 'My World'
@@ -655,3 +665,108 @@
 - regex: 'logioptionsplus/([\d\.]+)'
   name: 'Logi Options+'
   version: '$1'
+
+# Emby Theater (https://emby.media/emby-theater.html)
+- regex: 'EmbyTheater/([\d\.]+)'
+  name: 'Emby Theater'
+  version: '$1'
+
+# Y8 Browser (https://www.y8.com/)
+- regex: 'y8-browser/([\d\.]+)'
+  name: 'Y8 Browser'
+  version: '$1'
+
+# NuMuKi Browser (https://www.numuki.com/app-download/)
+- regex: 'NuMuKiBrowser/([\d\.]+)'
+  name: 'NuMuKi Browser'
+  version: '$1'
+
+# Landis+Gyr AIM Browser (https://www.landisgyr.eu/product/gridstream-aim/)
+- regex: 'LandisGyrAIMbrowser/(\d+[\.\d]+)'
+  name: 'Landis+Gyr AIM Browser'
+  version: '$1'
+
+# Visual Studio Code (https://code.visualstudio.com/)
+- regex: 'Code/(\d+[\.\d]+)'
+  name: 'Visual Studio Code'
+  version: '$1'
+
+# Wireshark (https://www.wireshark.org)
+- regex: 'Wireshark/(\d+[\.\d]+)'
+  name: 'Wireshark'
+  version: '$1'
+
+# Samsung Magician (https://www.samsung.com/semiconductor/minisite/ssd/product/consumer/magician/)
+- regex: 'Magician'
+  name: 'Samsung Magician'
+  version: ''
+
+# Razer Synapse (https://www.razer.com/synapse-3)
+- regex: 'Razer Central PC'
+  name: 'Razer Synapse'
+  version: ''
+
+# Git (https://git-scm.com/download/win)
+- regex: 'git/(\d+[\.\d]+)'
+  name: 'Git'
+  version: '$1'
+
+# Google Podcasts (https://apps.apple.com/us/app/google-podcasts/id1398000105)
+- regex: 'GooglePodcasts/(\d+[\.\d]+)'
+  name: 'Google Podcasts'
+  version: '$1'
+
+# Windows CryptoAPI (https://www.microsoft.com/en-us/)
+- regex: 'Microsoft-CryptoAPI/(\d+[\.\d]+)'
+  name: 'Windows CryptoAPI'
+  version: ''
+
+# Windows Delivery Optimization (https://www.microsoft.com/en-us/)
+- regex: 'Microsoft-Delivery-Optimization'
+  name: 'Windows Delivery Optimization'
+  version: ''
+
+# Windows Update Agent (https://www.microsoft.com/en-us/)
+- regex: 'Windows-Update-Agent'
+  name: 'Windows Update Agent'
+  version: ''
+
+# Dr. Watson (https://www.microsoft.com/en-us/)
+- regex: '^MSDW'
+  name: 'Dr. Watson'
+  version: ''
+
+# qBittorrent (https://www.qbittorrent.org/)
+- regex: 'qBittorrent/(\d+[\.\d]+)'
+  name: 'qBittorrent'
+  version: '$1'
+
+# CPU-Z (https://www.cpuid.com/)
+- regex: '^CPUID'
+  name: 'CPU-Z'
+  version: ''
+
+# AIDA64 (https://www.aida64.com/)
+- regex: 'AIDA64'
+  name: 'AIDA64'
+  version: ''
+
+# HandBrake (https://handbrake.fr/)
+- regex: 'HandBrake Win Upd (\d+[\.\d]+)'
+  name: 'HandBrake'
+  version: '$1'
+
+# CCleaner (https://www.ccleaner.com/)
+- regex: 'CCleaner, (\d+[\.\d]+)'
+  name: 'CCleaner'
+  version: '$1'
+
+# Edge Update (https://www.microsoft.com/en-us/)
+- regex: 'Microsoft Edge Update/(\d+[\.\d]+)'
+  name: 'Edge Update'
+  version: '$1'
+
+# Bose Music (https://apps.apple.com/us/app/bose-music/id1364986984)
+- regex: 'Bose Music'
+  name: 'Bose Music'
+  version: ''
