--- a/Tests/fixtures/mobile_apps.yml
+++ b/Tests/fixtures/mobile_apps.yml
@@ -1263,3 +1263,353 @@
     model: ""
   os_family: Windows
   browser_family: Unknown
+-
+  user_agent: Mozilla/5.0 (Windows NT 10.0; Win64; x64) AppleWebKit/537.36 (KHTML, like Gecko) EmbyTheater/3.0.6 Chrome/69.0.3497.106 Electron/4.0.0 Safari/537.36
+  os:
+    name: Windows
+    version: "10"
+    platform: x64
+  client:
+    type: mobile app
+    name: Emby Theater
+    version: 3.0.6
+  device:
+    type: desktop
+    brand: ""
+    model: ""
+  os_family: Windows
+  browser_family: Unknown
+-
+  user_agent: Mozilla/5.0 (Windows NT 10.0; Win64; x64) AppleWebKit/537.36 (KHTML, like Gecko) y8-browser/1.0.10 Chrome/73.0.3683.121 Electron/5.0.13 Safari/537.36
+  os:
+    name: Windows
+    version: "10"
+    platform: x64
+  client:
+    type: mobile app
+    name: Y8 Browser
+    version: 1.0.10
+  device:
+    type: desktop
+    brand: ""
+    model: ""
+  os_family: Windows
+  browser_family: Unknown
+-
+  user_agent: Mozilla/5.0 (Windows NT 10.0; Win64; x64) AppleWebKit/537.36 (KHTML, like Gecko) NuMuKiBrowser/1.0.2 Chrome/87.0.4280.88 Electron/11.1.1 Safari/537.36
+  os:
+    name: Windows
+    version: "10"
+    platform: x64
+  client:
+    type: mobile app
+    name: NuMuKi Browser
+    version: 1.0.2
+  device:
+    type: desktop
+    brand: ""
+    model: ""
+  os_family: Windows
+  browser_family: Unknown
+-
+  user_agent: Mozilla/5.0 (Windows NT 10.0; Win64; x64) AppleWebKit/537.36 (KHTML, like Gecko) LandisGyrAIMbrowser/1.1.11 Chrome/83.0.4103.122 Electron/9.2.1 Safari/537.36
+  os:
+    name: Windows
+    version: "10"
+    platform: x64
+  client:
+    type: mobile app
+    name: Landis+Gyr AIM Browser
+    version: 1.1.11
+  device:
+    type: desktop
+    brand: ""
+    model: ""
+  os_family: Windows
+  browser_family: Unknown
+-
+  user_agent: Mozilla/5.0 (Windows NT 10.0; Win64; x64) AppleWebKit/537.36 (KHTML, like Gecko) Code/1.61.2 Chrome/91.0.4472.164 Electron/13.5.1 Safari/537.36
+  os:
+    name: Windows
+    version: "10"
+    platform: x64
+  client:
+    type: mobile app
+    name: Visual Studio Code
+    version: 1.61.2
+  device:
+    type: desktop
+    brand: ""
+    model: ""
+  os_family: Windows
+  browser_family: Unknown
+-
+  user_agent: Wireshark/3.4.9 WinSparkle/0.5.7 (Win64)
+  os:
+    name: Windows
+    version: ""
+    platform: x64
+  client:
+    type: mobile app
+    name: Wireshark
+    version: 3.4.9
+  device:
+    type: desktop
+    brand: ""
+    model: ""
+  os_family: Windows
+  browser_family: Unknown
+-
+  user_agent: Magician
+  os: [ ]
+  client:
+    type: mobile app
+    name: Samsung Magician
+    version: ""
+  device:
+    type: ""
+    brand: ""
+    model: ""
+  os_family: Unknown
+  browser_family: Unknown
+-
+  user_agent: Razer Central PC/1.0 (Win32NT; 10.0.19043.0; Microsoft Windows NT 10.0.19043.0)
+  os:
+    name: Windows
+    version: "10"
+    platform: ""
+  client:
+    type: mobile app
+    name: Razer Synapse
+    version: ""
+  device:
+    type: desktop
+    brand: ""
+    model: ""
+  os_family: Windows
+  browser_family: Unknown
+-
+  user_agent: Mozilla/5.0 (Windows NT 10.0; Win64; x64) AppleWebKit/537.36 (KHTML, like Gecko) Binance/1.26.0 Chrome/89.0.4389.128 Electron/12.0.7 Safari/537.36 (electron 1.26.0)
+  os:
+    name: Windows
+    version: "10"
+    platform: x64
+  client:
+    type: mobile app
+    name: Binance
+    version: 1.26.0
+  device:
+    type: desktop
+    brand: ""
+    model: ""
+  os_family: Windows
+  browser_family: Unknown
+-
+  user_agent: git/2.32.0.windows.2
+  os:
+    name: Windows
+    version: ""
+    platform: ""
+  client:
+    type: mobile app
+    name: Git
+    version: 2.32.0
+  device:
+    type: desktop
+    brand: ""
+    model: ""
+  os_family: Windows
+  browser_family: Unknown
+-
+  user_agent: GooglePodcasts/2.0.2 iPod_touch/13.4.1 hw/iPod9_1
+  os:
+    name: iOS
+    version: 13.4.1
+    platform: ""
+  client:
+    type: mobile app
+    name: Google Podcasts
+    version: 2.0.2
+  device:
+    type: portable media player
+    brand: Apple
+    model: iPod Touch 7
+  os_family: iOS
+  browser_family: Unknown
+-
+  user_agent: Microsoft-CryptoAPI/10.0
+  os:
+    name: Windows
+    version: "10.0"
+    platform: ""
+  client:
+    type: mobile app
+    name: Windows CryptoAPI
+    version: ""
+  device:
+    type: desktop
+    brand: ""
+    model: ""
+  os_family: Windows
+  browser_family: Unknown
+-
+  user_agent: Microsoft-Delivery-Optimization/10.0
+  os:
+    name: Windows
+    version: "10.0"
+    platform: ""
+  client:
+    type: mobile app
+    name: Windows Delivery Optimization
+    version: ""
+  device:
+    type: desktop
+    brand: ""
+    model: ""
+  os_family: Windows
+  browser_family: Unknown
+-
+  user_agent: Windows-Update-Agent/10.0.10011.16384 Client-Protocol/2.32
+  os:
+    name: Windows
+    version: "10.0"
+    platform: ""
+  client:
+    type: mobile app
+    name: Windows Update Agent
+    version: ""
+  device:
+    type: desktop
+    brand: ""
+    model: ""
+  os_family: Windows
+  browser_family: Unknown
+-
+  user_agent: MSDW
+  os:
+    name: Windows
+    version: ""
+    platform: ""
+  client:
+    type: mobile app
+    name: Dr. Watson
+    version: ""
+  device:
+    type: desktop
+    brand: ""
+    model: ""
+  os_family: Windows
+  browser_family: Unknown
+-
+  user_agent: qBittorrent/4.3.9 ProgramUpdater (www.qbittorrent.org)
+  os: [ ]
+  client:
+    type: mobile app
+    name: qBittorrent
+    version: 4.3.9
+  device:
+    type: ""
+    brand: ""
+    model: ""
+  os_family: Unknown
+  browser_family: Unknown
+-
+  user_agent: CPUID
+  os: [ ]
+  client:
+    type: mobile app
+    name: CPU-Z
+    version: ""
+  device:
+    type: ""
+    brand: ""
+    model: ""
+  os_family: Unknown
+  browser_family: Unknown
+-
+  user_agent: AIDA64
+  os: [ ]
+  client:
+    type: mobile app
+    name: AIDA64
+    version: ""
+  device:
+    type: ""
+    brand: ""
+    model: ""
+  os_family: Unknown
+  browser_family: Unknown
+-
+  user_agent: HandBrake Win Upd 1.4.2 2021100300
+  os:
+    name: Windows
+    version: ""
+    platform: ""
+  client:
+    type: mobile app
+    name: HandBrake
+    version: 1.4.2
+  device:
+    type: desktop
+    brand: ""
+    model: ""
+  os_family: Windows
+  browser_family: Unknown
+-
+  user_agent: Mozilla/4.0 (CCleaner, 5.86.9258)
+  os: [ ]
+  client:
+    type: mobile app
+    name: CCleaner
+    version: 5.86.9258
+  device:
+    type: ""
+    brand: ""
+    model: ""
+  os_family: Unknown
+  browser_family: Unknown
+-
+  user_agent: Microsoft Edge Update/1.3.153.47;winhttp
+  os: [ ]
+  client:
+    type: mobile app
+    name: Edge Update
+    version: 1.3.153.47
+  device:
+    type: ""
+    brand: ""
+    model: ""
+  os_family: Unknown
+  browser_family: Unknown
+-
+  user_agent: Bose Music/16654 CFNetwork/1240.0.4 Darwin/20.5.0
+  os:
+    name: iOS
+    version: "14.6"
+    platform: ""
+  client:
+    type: mobile app
+    name: Bose Music
+    version: ""
+  device:
+    type: ""
+    brand: Apple
+    model: ""
+  os_family: iOS
+  browser_family: Unknown
+-
+  user_agent: 'Mozilla/5.0 (iPad; CPU OS 10_3_2 like Mac OS X) AppleWebKit/603.2.4 (KHTML, like Gecko) Mobile/14F89 [FBAN/GroupsForiOS;FBAV/48.0;FBBV/40069465;FBRV/0;FBDV/iPad3,4;FBMD/iPad;FBSN/iOS;FBSV/10.3.2;FBSS/2;FBCR/;FBID/tablet;FBLC/pt_BR;FBOP/5]'
+  os:
+    name: iOS
+    version: 10.3.2
+    platform: ""
+  client:
+    type: mobile app
+    name: Facebook Groups
+    version: "48.0"
+  device:
+    type: tablet
+    brand: Apple
+    model: iPad 4
+  os_family: iOS
+  browser_family: Unknown
