--- a/Tests/fixtures/portable_media_player.yml
+++ b/Tests/fixtures/portable_media_player.yml
@@ -525,3 +525,35 @@
     model: Diverso 700
   os_family: Android
   browser_family: Chrome
+-
+  user_agent: GooglePodcasts/2.0.2 iPod_touch/13.4.1 hw/iPod9_1
+  os:
+    name: iOS
+    version: 13.4.1
+    platform: ""
+  client:
+    type: mobile app
+    name: Google Podcasts
+    version: 2.0.2
+  device:
+    type: portable media player
+    brand: Apple
+    model: iPod Touch 7
+  os_family: iOS
+  browser_family: Unknown
+-
+  user_agent: Mozilla/5.0 (iPod; U; CPU iPhone OS 421 like Mac OS X; fy-DE) AppleWebKit/533.17.9 (KHTML like Gecko) Mobile/8C148 iPod41 BingWeb/3.02.1641.20120106
+  os:
+    name: iOS
+    version: 4.2.1
+    platform: ""
+  client:
+    type: mobile app
+    name: BingWebApp
+    version: 3.02.1641.20120106
+  device:
+    type: portable media player
+    brand: Apple
+    model: iPod Touch 4
+  os_family: iOS
+  browser_family: Unknown
