--- a/Tests/fixtures/tv.yml
+++ b/Tests/fixtures/tv.yml
@@ -10046,3 +10046,21 @@
     model: GS1
   os_family: Android
   browser_family: Android Browser
+-
+  user_agent: Mozilla/5.0 (Linux; Android 10; Andowl) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/94.0.4606.85 Mobile Safari/537.36
+  os:
+    name: Android
+    version: "10"
+    platform: ""
+  client:
+    type: browser
+    name: Chrome Mobile
+    version: 94.0.4606.85
+    engine: Blink
+    engine_version: ""
+  device:
+    type: tv
+    brand: Andowl
+    model: ""
+  os_family: Android
+  browser_family: Chrome
